--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "jest --verbose --coverage",
+    "test:watch": "jest --watch",
     "dev": "nodemon server.js"
   },
   "author": "",
