--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "node server",
     "test": "jest --verbose --coverage",
     "test:watch": "jest --watch",
     "dev": "nodemon server.js"
