--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.4",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.16"
   },
   "devDependencies": {
