add logflare to error MW

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ PORT=4000
 APP_URL=http://localhost:3000/
 CONNECTION_STRING=mongodb://localhost:27017/template-fullstack
 SECRET_KEY=fluffy_l1ttle_d3mon5
+LOGFLARE_SOURCE_ID=a24cc947-0af1-4822-b2d3-a23f5882cbc6
+LOGFLARE_API_KEY=Xb2epud0H8Qh
