--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.4",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "pino": "^8.0.0",
+    "pino-logflare": "^0.3.12"
   },
   "devDependencies": {
     "jest": "^28.1.0",
