--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=4000
-APP_URL=http://localhost:3000/
+APP_URL=http://localhost:3000
 CONNECTION_STRING=mongodb://localhost:27017/template-fullstack
 
 SECRET_KEY=fluffy_l1ttle_d3mon5
